...
                    android:textStyle="bold"
                    android:text="@string/label_activity_system_config" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_activity_system_config_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_activity_system_config_reset_margin"
                app:cardCornerRadius="@dimen/cardview_activity_system_config_reset_corner_radius"
                app:cardElevation="@dimen/cardview_activity_system_config_reset_card_elevation">

...
                            android:id="@+id/radiobutton_activity_system_external_storage_type_primary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_activity_system_external_storage_type_primary" />

                        <RadioButton
                            android:id="@+id/radiobutton_activity_system_external_storage_type_sdcard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_activity_system_external_storage_type_sdcard" />

                    </RadioGroup>

...
                            android:id="@+id/radiobutton_activity_system_theme_system"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_activity_system_theme_system" />

                        <RadioButton
                            android:id="@+id/radiobutton_activity_system_theme_light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_activity_system_theme_light" />

                        <RadioButton
                            android:id="@+id/radiobutton_activity_system_theme_dark"
...
                        android:layout_margin="@dimen/linearlayout_activity_system_alarm_on_high_prio_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_system_alarm_on_high_prio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:trackTint="@drawable/switchtrack_selector"
                            app:thumbTint="@drawable/switchthumb_selector"
                            android:showText="false" />

...
                        android:layout_margin="@dimen/linearlayout_activity_system_file_logger_enabled_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_system_file_logger_enabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:trackTint="@drawable/switchtrack_selector"
                            app:thumbTint="@drawable/switchthumb_selector"
                            android:showText="false" />

...
                        android:layout_margin="@dimen/linearlayout_activity_system_file_dump_enabled_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_system_file_dump_enabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:trackTint="@drawable/switchtrack_selector"
                            app:thumbTint="@drawable/switchthumb_selector"
                            android:showText="false" />

...
