/*
 * Copyright (c) 2026 Alwin Ibba
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package net.ibbaa.keepitup.ui;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.hasChildCount;
import static androidx.test.espresso.matcher.ViewMatchers.isChecked;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isEnabled;
import static androidx.test.espresso.matcher.ViewMatchers.isNotChecked;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.endsWith;
import static org.hamcrest.Matchers.startsWith;
import static org.hamcrest.core.IsNot.not;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertFalse;
import static org.junit.Assert.assertNotEquals;
import static org.junit.Assert.assertNotNull;
import static org.junit.Assert.assertNull;
import static org.junit.Assert.assertTrue;

import android.content.Context;
import android.content.SharedPreferences;
import android.os.Bundle;

import androidx.appcompat.app.AppCompatDelegate;
import androidx.lifecycle.Lifecycle;
import androidx.test.core.app.ActivityScenario;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.MediumTest;
import androidx.test.platform.app.InstrumentationRegistry;

import net.ibbaa.keepitup.R;
import net.ibbaa.keepitup.db.DBSetup;
import net.ibbaa.keepitup.logging.Dump;
import net.ibbaa.keepitup.logging.Log;
import net.ibbaa.keepitup.model.AccessType;
import net.ibbaa.keepitup.model.AccessTypeData;
import net.ibbaa.keepitup.model.Header;
import net.ibbaa.keepitup.model.HeaderType;
import net.ibbaa.keepitup.model.Interval;
import net.ibbaa.keepitup.model.LogEntry;
import net.ibbaa.keepitup.model.NetworkTask;
import net.ibbaa.keepitup.model.NotificationType;
import net.ibbaa.keepitup.model.Resolve;
import net.ibbaa.keepitup.model.SNMPAuthAlgorithm;
import net.ibbaa.keepitup.model.SNMPPrivAlgorithm;
import net.ibbaa.keepitup.model.SNMPTransport;
import net.ibbaa.keepitup.model.SNMPVersion;
import net.ibbaa.keepitup.model.Time;
import net.ibbaa.keepitup.resources.JSONSystemSetup;
import net.ibbaa.keepitup.resources.NoBackupPreferenceManager;
import net.ibbaa.keepitup.resources.PreferenceManager;
import net.ibbaa.keepitup.resources.SystemSetupResult;
import net.ibbaa.keepitup.resources.encryption.EncryptionSetupResult;
import net.ibbaa.keepitup.resources.encryption.JSONEncryptSetup;
import net.ibbaa.keepitup.resources.encryption.MainKeyAccess;
import net.ibbaa.keepitup.service.NetworkTaskProcessServiceScheduler;
import net.ibbaa.keepitup.test.mock.MockAlarmManager;
import net.ibbaa.keepitup.test.mock.MockDBPurgeTask;
import net.ibbaa.keepitup.test.mock.MockExportTask;
import net.ibbaa.keepitup.test.mock.MockImportTask;
import net.ibbaa.keepitup.test.mock.MockPermissionManager;
import net.ibbaa.keepitup.test.mock.MockPowerManager;
import net.ibbaa.keepitup.test.mock.MockStoragePermissionManager;
import net.ibbaa.keepitup.test.mock.MockThemeManager;
import net.ibbaa.keepitup.test.mock.TestRegistry;
import net.ibbaa.keepitup.ui.sync.DBPurgeTask;
import net.ibbaa.keepitup.ui.sync.ExportTask;
import net.ibbaa.keepitup.ui.sync.HeaderSyncHandler;
import net.ibbaa.keepitup.ui.sync.ImportTask;
import net.ibbaa.keepitup.ui.validation.CredentialInfo;
import net.ibbaa.keepitup.util.BundleUtil;
import net.ibbaa.keepitup.util.StreamUtil;
import net.ibbaa.keepitup.util.StringUtil;

import org.hamcrest.Matchers;
import org.junit.After;
import org.junit.Before;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.io.File;
import java.io.FileInputStream;
import java.io.FileOutputStream;
import java.nio.charset.StandardCharsets;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.List;

@MediumTest
@SuppressWarnings({"SameParameterValue", "SequencedCollectionMethodCanBeUsed"})
@RunWith(AndroidJUnit4.class)
public class SystemActivityTest extends BaseUITest {

    private MockAlarmManager alarmManager;
    private MockThemeManager themeManager;
    private MockStoragePermissionManager storagePermissionManager;
    private MockPermissionManager permissionManager;

    @Before
    public void beforeEachTestMethod() {
        super.beforeEachTestMethod();
        alarmManager = (MockAlarmManager) getNetworkTaskProcessServiceScheduler().getAlarmManager();
        alarmManager.reset();
        themeManager = new MockThemeManager();
        themeManager.reset();
        storagePermissionManager = getMockStoragePermissionManager();
        permissionManager = new MockPermissionManager();
        addFolderPermission();
        DBSetup dbSetup = new DBSetup(TestRegistry.getContext());
        dbSetup.initializeHeaderTable();
        resetGlobalHeaderHandler();
    }

    @After
    public void afterEachTestMethod() {
        super.afterEachTestMethod();
        resetGlobalHeaderHandler();
    }

    @Test
    public void testResetConfigurationCancel() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectScheduler(activityScenario);
        injectStorageManager(activityScenario);
        injectThemeManager(activityScenario);
        insertAndScheduleNetworkTask();
        getLogDAO().insertAndDeleteLog(new LogEntry());
        getLogDAO().insertAndDeleteLog(new LogEntry());
        getIntervalDAO().insertInterval(getInterval1());
        getTimeBasedSuspensionScheduler().reset();
        getTimeBasedSuspensionScheduler().getIntervals();
        getHeaderDAO().insertHeader(getHeader(1));
        getResolveDAO().insertResolve(getResolve(1, 1));
        resetGlobalHeaderHandler();
        assertFalse(getNetworkTaskDAO().readAllNetworkTasks().isEmpty());
        assertFalse(getTimeBasedSuspensionScheduler().getIntervals().isEmpty());
        assertFalse(getSchedulerIdHistoryDAO().readAllSchedulerIds().isEmpty());
        assertFalse(getLogDAO().readAllLogs().isEmpty());
        assertFalse(getAccessTypeDataDAO().readAllAccessTypeData().isEmpty());
        assertFalse(getIntervalDAO().readAllIntervals().isEmpty());
        assertEquals(2, getHeaderDAO().readAllHeaders().size());
        assertFalse(getResolveDAO().readAllResolvesForNetworkTask(1).isEmpty());
        getPreferenceManager().setPreferencePingCount(5);
        getPreferenceManager().setPreferenceConnectCount(10);
        getPreferenceManager().setPreferenceNotificationInactiveNetwork(true);
        getPreferenceManager().setPreferenceNotificationType(NotificationType.CHANGE);
        getPreferenceManager().setPreferenceNotificationAfterFailures(2);
        getPreferenceManager().setPreferenceSuspensionEnabled(false);
        getPreferenceManager().setPreferenceEnforceDefaultPingPackageSize(true);
        getPreferenceManager().setPreferenceDownloadExternalStorage(true);
        getPreferenceManager().setPreferenceExternalStorageType(30);
        getPreferenceManager().setPreferenceTheme(5);
        getPreferenceManager().setPreferenceDownloadFolder("folder");
        getPreferenceManager().setPreferenceArbitraryDownloadFolder("/folder");
        getPreferenceManager().setPreferenceDownloadKeep(true);
        getPreferenceManager().setPreferenceDownloadFollowsRedirects(false);
        getPreferenceManager().setPreferenceLogFolder("folder");
        getPreferenceManager().setPreferenceArbitraryLogFolder("/folder");
        getPreferenceManager().setPreferenceAccessType(AccessType.CONNECT);
        getPreferenceManager().setPreferenceAddress("address");
        getPreferenceManager().setPreferencePort(123);
        getPreferenceManager().setPreferenceInterval(456);
        getPreferenceManager().setPreferenceStopOnSuccess(true);
        getPreferenceManager().setPreferenceIgnoreSSLError(true);
        getPreferenceManager().setPreferenceAllowLegacyTLS(true);
        getPreferenceManager().setPreferenceFailureOnCertificateExpiry(true);
        getPreferenceManager().setPreferenceFailureOnCertificateExpiryDays(14);
        getPreferenceManager().setPreferenceOnlyWifi(true);
        getPreferenceManager().setPreferenceNotification(true);
        getPreferenceManager().setPreferenceHighPrio(true);
        getPreferenceManager().setPreferenceUseDefaultHeaders(false);
        getPreferenceManager().setPreferencePingPackageSize(15);
        getPreferenceManager().setPreferenceImportFolder("folderImport");
        getPreferenceManager().setPreferenceExportFolder("folderExport");
        getPreferenceManager().setPreferenceLastArbitraryExportFile("arbitraryFolderExport");
        getPreferenceManager().setPreferenceFileLoggerEnabled(true);
        getPreferenceManager().setPreferenceFileDumpEnabled(true);
        getPreferenceManager().setPreferenceAllowArbitraryFileLocation(false);
        getPreferenceManager().setPreferenceAlarmOnHighPrio(true);
        getNoBackupPreferenceManager().setPreferenceAskedNotificationPermission(true);
        getPreferenceManager().setPreferenceSAFNoticeShown(true);
        getPreferenceManager().setPreferenceAlarmInfoShown(true);
        getPreferenceManager().setPreferenceResolveMatchAddress("10.0.0.1");
        getPreferenceManager().setPreferenceResolveMatchPort(789);
        getPreferenceManager().setPreferenceResolveAddress("127.0.0.1");
        getPreferenceManager().setPreferenceResolvePort(456);
        getPreferenceManager().setPreferenceSNMPVersion(SNMPVersion.V1);
        getPreferenceManager().setPreferenceSNMPPort(162);
        getPreferenceManager().setPreferenceSNMPTransport(SNMPTransport.TCP);
        getPreferenceManager().setPreferenceSNMPAuthAlgorithm(SNMPAuthAlgorithm.SHA256);
        getPreferenceManager().setPreferenceSNMPPrivAlgorithm(SNMPPrivAlgorithm.AES256);
        assertTrue(storagePermissionManager.hasAnyPersistentPermission(null));
        onView(withId(R.id.switch_activity_system_file_logger_enabled)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_file_logger_enabled)).perform(click());
        onView(withId(R.id.switch_activity_system_file_dump_enabled)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_file_dump_enabled)).perform(click());
        onView(withId(R.id.cardview_activity_system_config_reset)).perform(scrollTo());
        onView(withId(R.id.cardview_activity_system_config_reset)).perform(click());
        onView(withId(R.id.imageview_dialog_confirm_cancel)).perform(click());
        assertTrue(storagePermissionManager.hasAnyPersistentPermission(null));
        assertFalse(alarmManager.wasCancelAlarmCalled());
        assertFalse(getNetworkTaskDAO().readAllNetworkTasks().isEmpty());
        assertFalse(getSchedulerIdHistoryDAO().readAllSchedulerIds().isEmpty());
        assertFalse(getLogDAO().readAllLogs().isEmpty());
        assertFalse(getIntervalDAO().readAllIntervals().isEmpty());
        assertFalse(getAccessTypeDataDAO().readAllAccessTypeData().isEmpty());
        assertFalse(getTimeBasedSuspensionScheduler().getIntervals().isEmpty());
        assertEquals(2, getHeaderDAO().readAllHeaders().size());
        assertFalse(getResolveDAO().readAllResolvesForNetworkTask(1).isEmpty());
        HeaderSyncHandler headerHandler = new HeaderSyncHandler(TestRegistry.getContext());
        assertEquals(2, headerHandler.getGlobalHeaders().size());
        assertEquals(5, getPreferenceManager().getPreferencePingCount());
        assertEquals(10, getPreferenceManager().getPreferenceConnectCount());
        assertTrue(getPreferenceManager().getPreferenceNotificationInactiveNetwork());
        assertEquals(NotificationType.CHANGE, getPreferenceManager().getPreferenceNotificationType());
        assertEquals(2, getPreferenceManager().getPreferenceNotificationAfterFailures());
        assertFalse(getPreferenceManager().getPreferenceSuspensionEnabled());
        assertTrue(getPreferenceManager().getPreferenceEnforceDefaultPingPackageSize());
        assertTrue(getPreferenceManager().getPreferenceDownloadExternalStorage());
        assertEquals(30, getPreferenceManager().getPreferenceExternalStorageType());
        assertEquals(5, getPreferenceManager().getPreferenceTheme());
        assertEquals("folder", getPreferenceManager().getPreferenceDownloadFolder());
        assertEquals("/folder", getPreferenceManager().getPreferenceArbitraryDownloadFolder());
        assertTrue(getPreferenceManager().getPreferenceDownloadKeep());
        assertFalse(getPreferenceManager().getPreferenceDownloadFollowsRedirects());
        assertEquals("folder", getPreferenceManager().getPreferenceLogFolder());
        assertEquals("/folder", getPreferenceManager().getPreferenceArbitraryLogFolder());
        assertEquals(AccessType.CONNECT, getPreferenceManager().getPreferenceAccessType());
        assertEquals("address", getPreferenceManager().getPreferenceAddress());
        assertEquals(123, getPreferenceManager().getPreferencePort());
        assertEquals(456, getPreferenceManager().getPreferenceInterval());
        assertTrue(getPreferenceManager().getPreferenceStopOnSuccess());
        assertTrue(getPreferenceManager().getPreferenceIgnoreSSLError());
        assertTrue(getPreferenceManager().getPreferenceAllowLegacyTLS());
        assertTrue(getPreferenceManager().getPreferenceFailureOnCertificateExpiry());
        assertEquals(14, getPreferenceManager().getPreferenceFailureOnCertificateExpiryDays());
        assertTrue(getPreferenceManager().getPreferenceOnlyWifi());
        assertTrue(getPreferenceManager().getPreferenceNotification());
        assertTrue(getPreferenceManager().getPreferenceHighPrio());
        assertFalse(getPreferenceManager().getPreferenceUseDefaultHeaders());
        assertEquals(15, getPreferenceManager().getPreferencePingPackageSize());
        assertEquals("folderImport", getPreferenceManager().getPreferenceImportFolder());
        assertEquals("folderExport", getPreferenceManager().getPreferenceExportFolder());
        assertEquals("arbitraryFolderExport", getPreferenceManager().getPreferenceLastArbitraryExportFile());
        assertTrue(getPreferenceManager().getPreferenceAlarmOnHighPrio());
        assertTrue(getNoBackupPreferenceManager().getPreferenceAskedNotificationPermission());
        assertTrue(getPreferenceManager().getPreferenceSAFNoticeShown());
        assertTrue(getPreferenceManager().getPreferenceAlarmInfoShown());
        assertTrue(getPreferenceManager().getPreferenceFileLoggerEnabled());
        assertTrue(getPreferenceManager().getPreferenceFileDumpEnabled());
        assertFalse(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertEquals("10.0.0.1", getPreferenceManager().getPreferenceResolveMatchAddress());
        assertEquals(789, getPreferenceManager().getPreferenceResolveMatchPort());
        assertEquals("127.0.0.1", getPreferenceManager().getPreferenceResolveAddress());
        assertEquals(456, getPreferenceManager().getPreferenceResolvePort());
        assertEquals(SNMPVersion.V1, getPreferenceManager().getPreferenceSNMPVersion());
        assertEquals(162, getPreferenceManager().getPreferenceSNMPPort());
        assertEquals(SNMPTransport.TCP, getPreferenceManager().getPreferenceSNMPTransport());
        assertEquals(SNMPAuthAlgorithm.SHA256, getPreferenceManager().getPreferenceSNMPAuthAlgorithm());
        assertEquals(SNMPPrivAlgorithm.AES256, getPreferenceManager().getPreferenceSNMPPrivAlgorithm());
        activityScenario.close();
    }

    @Test
    public void testResetConfigurationCancelScreenRotation() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectScheduler(activityScenario);
        injectStorageManager(activityScenario);
        injectThemeManager(activityScenario);
        insertAndScheduleNetworkTask();
        getLogDAO().insertAndDeleteLog(new LogEntry());
        getLogDAO().insertAndDeleteLog(new LogEntry());
        getIntervalDAO().insertInterval(getInterval1());
        getTimeBasedSuspensionScheduler().reset();
        getTimeBasedSuspensionScheduler().getIntervals();
        getHeaderDAO().insertHeader(getHeader(1));
        getResolveDAO().insertResolve(getResolve(1, 1));
        resetGlobalHeaderHandler();
        assertFalse(getNetworkTaskDAO().readAllNetworkTasks().isEmpty());
        assertFalse(getSchedulerIdHistoryDAO().readAllSchedulerIds().isEmpty());
        assertFalse(getLogDAO().readAllLogs().isEmpty());
        assertFalse(getAccessTypeDataDAO().readAllAccessTypeData().isEmpty());
        assertFalse(getIntervalDAO().readAllIntervals().isEmpty());
        assertFalse(getTimeBasedSuspensionScheduler().getIntervals().isEmpty());
        assertEquals(2, getHeaderDAO().readAllHeaders().size());
        assertFalse(getResolveDAO().readAllResolvesForNetworkTask(1).isEmpty());
        getPreferenceManager().setPreferencePingCount(5);
        getPreferenceManager().setPreferenceConnectCount(10);
        getPreferenceManager().setPreferenceNotificationInactiveNetwork(true);
        getPreferenceManager().setPreferenceNotificationType(NotificationType.CHANGE);
        getPreferenceManager().setPreferenceNotificationAfterFailures(2);
        getPreferenceManager().setPreferenceSuspensionEnabled(false);
        getPreferenceManager().setPreferenceEnforceDefaultPingPackageSize(true);
        getPreferenceManager().setPreferenceDownloadExternalStorage(true);
        getPreferenceManager().setPreferenceExternalStorageType(1);
        getPreferenceManager().setPreferenceTheme(1);
        getPreferenceManager().setPreferenceDownloadFolder("folder");
        getPreferenceManager().setPreferenceArbitraryDownloadFolder("/folder");
        getPreferenceManager().setPreferenceDownloadKeep(true);
        getPreferenceManager().setPreferenceDownloadFollowsRedirects(false);
        getPreferenceManager().setPreferenceLogFolder("folder");
        getPreferenceManager().setPreferenceArbitraryLogFolder("/folder");
        getPreferenceManager().setPreferenceAccessType(AccessType.CONNECT);
        getPreferenceManager().setPreferenceAddress("address");
        getPreferenceManager().setPreferencePort(123);
        getPreferenceManager().setPreferenceInterval(456);
        getPreferenceManager().setPreferenceStopOnSuccess(true);
        getPreferenceManager().setPreferenceIgnoreSSLError(true);
        getPreferenceManager().setPreferenceAllowLegacyTLS(true);
        getPreferenceManager().setPreferenceFailureOnCertificateExpiry(true);
        getPreferenceManager().setPreferenceFailureOnCertificateExpiryDays(14);
        getPreferenceManager().setPreferenceOnlyWifi(true);
        getPreferenceManager().setPreferenceNotification(true);
        getPreferenceManager().setPreferenceHighPrio(true);
        getPreferenceManager().setPreferenceUseDefaultHeaders(false);
        getPreferenceManager().setPreferencePingPackageSize(15);
        getPreferenceManager().setPreferenceImportFolder("folderImport");
        getPreferenceManager().setPreferenceExportFolder("folderExport");
        getPreferenceManager().setPreferenceLastArbitraryExportFile("arbitraryFolderExport");
        getPreferenceManager().setPreferenceFileLoggerEnabled(true);
        getPreferenceManager().setPreferenceFileDumpEnabled(true);
        getPreferenceManager().setPreferenceAllowArbitraryFileLocation(false);
        getPreferenceManager().setPreferenceAlarmOnHighPrio(true);
        getNoBackupPreferenceManager().setPreferenceAskedNotificationPermission(true);
        getPreferenceManager().setPreferenceSAFNoticeShown(true);
        getPreferenceManager().setPreferenceAlarmInfoShown(true);
        getPreferenceManager().setPreferenceResolveMatchAddress("10.0.0.1");
        getPreferenceManager().setPreferenceResolveMatchPort(789);
        getPreferenceManager().setPreferenceResolveAddress("127.0.0.1");
        getPreferenceManager().setPreferenceResolvePort(456);
        getPreferenceManager().setPreferenceSNMPVersion(SNMPVersion.V1);
        getPreferenceManager().setPreferenceSNMPPort(162);
        getPreferenceManager().setPreferenceSNMPTransport(SNMPTransport.TCP);
        getPreferenceManager().setPreferenceSNMPAuthAlgorithm(SNMPAuthAlgorithm.SHA256);
        getPreferenceManager().setPreferenceSNMPPrivAlgorithm(SNMPPrivAlgorithm.AES256);
        onView(withId(R.id.radiobutton_activity_system_external_storage_type_sdcard)).perform(click());
        onView(withId(R.id.radiobutton_activity_system_theme_light)).perform(click());
        onView(withId(R.id.switch_activity_system_alarm_on_high_prio)).perform(click());
        onView(withId(R.id.switch_activity_system_file_logger_enabled)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_file_logger_enabled)).perform(click());
        onView(withId(R.id.switch_activity_system_file_dump_enabled)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_file_dump_enabled)).perform(click());
        onView(withId(R.id.cardview_activity_system_config_reset)).perform(scrollTo());
        onView(withId(R.id.cardview_activity_system_config_reset)).perform(click());
        rotateScreen(activityScenario);
        rotateScreen(activityScenario);
        ((SystemActivity) getActivity(activityScenario)).injectNetworkTaskProcessServiceScheduler(getNetworkTaskProcessServiceScheduler());
        onView(withId(R.id.imageview_dialog_confirm_cancel)).perform(click());
        assertFalse(alarmManager.wasCancelAlarmCalled());
        assertFalse(getNetworkTaskDAO().readAllNetworkTasks().isEmpty());
        assertFalse(getSchedulerIdHistoryDAO().readAllSchedulerIds().isEmpty());
        assertFalse(getLogDAO().readAllLogs().isEmpty());
        assertFalse(getAccessTypeDataDAO().readAllAccessTypeData().isEmpty());
        assertFalse(getIntervalDAO().readAllIntervals().isEmpty());
        assertFalse(getTimeBasedSuspensionScheduler().getIntervals().isEmpty());
        assertEquals(2, getHeaderDAO().readAllHeaders().size());
        assertFalse(getResolveDAO().readAllResolvesForNetworkTask(1).isEmpty());
        HeaderSyncHandler headerHandler = new HeaderSyncHandler(TestRegistry.getContext());
        assertEquals(2, headerHandler.getGlobalHeaders().size());
        assertEquals(5, getPreferenceManager().getPreferencePingCount());
        assertEquals(10, getPreferenceManager().getPreferenceConnectCount());
        assertTrue(getPreferenceManager().getPreferenceNotificationInactiveNetwork());
        assertEquals(NotificationType.CHANGE, getPreferenceManager().getPreferenceNotificationType());
        assertEquals(2, getPreferenceManager().getPreferenceNotificationAfterFailures());
        assertFalse(getPreferenceManager().getPreferenceSuspensionEnabled());
